# airflow-etl-config

./: .gitignore  DEPLOYMENT_GUIDE.md  DOCUMENTACION.md  FIX_AUTH.md  LICENSE  MANIFEST.in  Makefile  PYPI_SETUP.md  README.md  publish.py  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  setup_and_test.sh  setup_pypi_credentials.sh  test_install.py  tutorial.ipynb
examples/: advanced_usage.py  basic_usage.py  custom_variables.py  production_setup.py
src/airflow_config/: __init__.py  core.py  exceptions.py  generator.py  query.py  scaffold.py  utils.py
tests/: conftest.py  test_core.py  test_scaffold.py  test_utils.py
